--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1766,7 +1766,7 @@ input, select, textarea {
 /* Section/Article */
 
 	section.special, article.special {
-		text-align: center;
+		text-align: justify;
 	}
 
 	header.major {
